--- a/final_project.qmd
+++ b/final_project.qmd
@@ -40,8 +40,8 @@ electricity_stats <- electricity_access |>
                values_to = "Electricity Access") |>
   filter(!is.na(`Electricity Access`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_under_elec` = mean(`Electricity Access`),
-            `sd_under_elec` = sd(`Electricity Access`))
+  summarise(`mean_under_elec` = mean(`Electricity Access`, na.rm = TRUE),
+            `sd_under_elec` = sd(`Electricity Access`, na.rm = TRUE))
 ```
 
 ## Experimenting for the Shiny App
@@ -81,8 +81,8 @@ agriculture_land_stats <- agricultural_land |>
                values_to = "Agricultural Land") |>
   filter(!is.na(`Agricultural Land`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_agr_land` = mean(`Agricultural Land`),
-            `sd_agr_land` = sd(`Agricultural Land`))
+  summarise(`mean_agr_land` = mean(`Agricultural Land`, na.rm = TRUE),
+            `sd_agr_land` = sd(`Agricultural Land`, na.rm = TRUE))
 ```
 
 ```{r}
@@ -98,8 +98,8 @@ freshwater_withdrawals_stats <- freshwater_withdrawals |>
                values_to = "Freshwater Withdrawals") |>
   filter(!is.na(`Freshwater Withdrawals`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_water_withd` = mean(`Freshwater Withdrawals`),
-            `sd_water_withd` = sd(`Freshwater Withdrawals`))
+  summarise(`mean_water_withd` = mean(`Freshwater Withdrawals`, na.rm = TRUE),
+            `sd_water_withd` = sd(`Freshwater Withdrawals`, na.rm = TRUE))
 ```
 
 ```{r}
@@ -115,8 +115,8 @@ atms_stats <- atms |>
                values_to = "ATMs") |>
   filter(!is.na(`ATMs`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_atms` = mean(`ATMs`),
-            `sd_atms` = sd(`ATMs`))
+  summarise(`mean_atms` = mean(`ATMs`, na.rm = TRUE),
+            `sd_atms` = sd(`ATMs`,na.rm = TRUE))
 ```
 
 ```{r}
@@ -132,8 +132,8 @@ precipitation_stats <- precipitation |>
                values_to = "Precipitation") |>
   filter(!is.na(`Precipitation`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_precip` = mean(`Precipitation`),
-            `sd_precip` = sd(`Precipitation`))
+  summarise(`mean_precip` = mean(`Precipitation`, na.rm = TRUE),
+            `sd_precip` = sd(`Precipitation`, na.rm = TRUE))
 ```
 
 ```{r}
@@ -149,8 +149,8 @@ sanitation_stats <- sanitation |>
                values_to = "Sanitation") |>
   filter(!is.na(`Sanitation`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_sanit` = mean(`Sanitation`),
-            `sd_sanit` = sd(`Sanitation`))
+  summarise(`mean_sanit` = mean(`Sanitation`, na.rm = TRUE),
+            `sd_sanit` = sd(`Sanitation`, na.rm = TRUE))
 ```
 
 ```{r}
@@ -166,8 +166,8 @@ broad_money_stats <- broad_money |>
                values_to = "Broad Money") |>
   filter(!is.na(`Broad Money`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_broad` = mean(`Broad Money`),
-            `sd_broad` = sd(`Broad Money`))
+  summarise(`mean_broad` = mean(`Broad Money`, na.rm = TRUE),
+            `sd_broad` = sd(`Broad Money`, na.rm = TRUE))
 ```
 
 ```{r}
@@ -183,8 +183,8 @@ agriculture_employment_stats <- agriculture_employment |>
                values_to = "Employment in Agriculture") |>
   filter(!is.na(`Employment in Agriculture`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_empl_agr` = mean(`Employment in Agriculture`),
-            `sd_empl_agr` = sd(`Employment in Agriculture`))
+  summarise(`mean_empl_agr` = mean(`Employment in Agriculture`, na.rm = TRUE),
+            `sd_empl_agr` = sd(`Employment in Agriculture`, na.rm = TRUE))
 ```
 
 ```{r}
@@ -200,8 +200,8 @@ fertility_rate_stats <- fertility_rate |>
                values_to = "Fertility Rate") |>
   filter(!is.na(`Fertility Rate`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_fert_rate` = mean(`Fertility Rate`),
-            `sd_fert_rate` = sd(`Fertility Rate`))
+  summarise(`mean_fert_rate` = mean(`Fertility Rate`, na.rm = TRUE),
+            `sd_fert_rate` = sd(`Fertility Rate`, na.rm = TRUE))
 ```
 
 ```{r}
@@ -217,8 +217,8 @@ gov_debt_stats <- gov_debt |>
                values_to = "Government Debt") |>
   filter(!is.na(`Government Debt`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_gov_debt` = mean(`Government Debt`),
-            `sd_gov_debt` = sd(`Government Debt`))
+  summarise(`mean_gov_debt` = mean(`Government Debt`, na.rm = TRUE),
+            `sd_gov_debt` = sd(`Government Debt`, na.rm = TRUE))
 ```
 
 ```{r}
@@ -234,8 +234,8 @@ internet_stats <- internet |>
                values_to = "Internet") |>
   filter(!is.na(`Internet`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_inter` = mean(`Internet`),
-            `sd_inter` = sd(`Internet`))
+  summarise(`mean_inter` = mean(`Internet`, na.rm = TRUE),
+            `sd_inter` = sd(`Internet`, na.rm = TRUE))
 ```
 
 ```{r}
@@ -251,8 +251,8 @@ birth_life_exp_stats <- birth_life_exp |>
                values_to = "Life Expectancy at Birth") |>
   filter(!is.na(`Life Expectancy at Birth`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_life_exp` = mean(`Life Expectancy at Birth`),
-            `sd_life_exp` = sd(`Life Expectancy at Birth`))
+  summarise(`mean_life_exp` = mean(`Life Expectancy at Birth`, na.rm = TRUE),
+            `sd_life_exp` = sd(`Life Expectancy at Birth`, na.rm = TRUE))
 ```
 
 ```{r}
@@ -269,8 +269,8 @@ poverty_stats <- poverty |>
                values_to = "Poverty") |>
   filter(!is.na(`Poverty`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_pov` = mean(`Poverty`),
-            `sd_pov` = sd(`Poverty`))
+  summarise(`mean_pov` = mean(`Poverty`, na.rm = TRUE),
+            `sd_pov` = sd(`Poverty`, na.rm = TRUE))
 ```
 
 ```{r}
@@ -287,8 +287,8 @@ school_enrol_stats <- school_enrol |>
                values_to = "School Enrollment") |>
   filter(!is.na(`School Enrollment`)) |>
   group_by(`Country Name`) |>
-  summarise(`mean_school_enr` = mean(`School Enrollment`),
-            `sd_school_enr` = sd(`School Enrollment`))
+  summarise(`mean_school_enr` = mean(`School Enrollment`, na.rm = TRUE),
+            `sd_school_enr` = sd(`School Enrollment`, na.rm = TRUE))
 ```
 
 ```{r}
@@ -344,25 +344,21 @@ ggpairs(data = full_stats_df, columns = c(2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22
 #### Logistic Regression Model Attempt
 
 ```{r}
-model_glm <- glm(data = full_stats_df, Underdeveloped~., family = "binomial")
+model_glm <- glm(data = full_stats_df, Underdeveloped~mean_agr_land + mean_empl_agr + mean_life_exp + 
+                  mean_under_elec + mean_fert_rate + mean_water_withd + mean_gov_debt + mean_precip, family = "binomial")
 model_glm
 ```
 
 ```{r}
 underdeveloped <- full_stats_df |>
   select(`Country Name`, Underdeveloped) |>
-  filter(Underdeveloped == 0)
+  filter(Underdeveloped == 1)
 ```
 
 ```{r}
 developed <- full_stats_df |>
   select(`Country Name`, Underdeveloped) |>
-  filter(Underdeveloped != 0)
-```
-
-```{r}
-full_stats_df |>
-  names()
+  filter(Underdeveloped != 1)
 ```
 
 ```{r}
@@ -374,9 +370,11 @@ ranges <- sapply(full_stats_df[, numeric_cols], function(x) {
   x <- na.omit(x)
   c(min(x), max(x))
 })
+```
 
-# Print the ranges
-print(ranges)
+```{r}
+median_water_withd = median(full_stats_df$mean_water_withd, na.rm = TRUE)
+median__sanit = median(full_stats_df$mean_sanit, na.rm = TRUE)
 ```
 
 ```{r}
@@ -384,52 +382,36 @@ library(modelr)
 grid <- full_stats_df |>
   data_grid(
   mean_agr_land = seq_range(c(0.529988, 83.730378), n = 3),
-  sd_agr_land = seq_range(c(0.00000, 10.17398), n = 3), 
   mean_empl_agr = seq_range(c(0.3385729, 89.4033177),n = 3),
-  sd_empl_agr = seq_range(c(0.1398931, 14.9939666), n = 3),
-  mean_atms = seq_range(c(0.1511111, 257.4717647), n = 3),
-  sd_atms = seq_range(c(0.03962323, 92.97259482), n = 3),
   mean_life_exp = seq_range(c(46.14012, 82.19024), n = 3),
-  sd_life_exp = seq_range(c(0.6238412, 12.0160531), n = 3),
-  mean_broad = seq_range(c(9.905998, 281.061859), n = 3),
-  sd_broad = seq_range(c(1.55058, 90.20813), n = 3),
-  mean_under_elec = seq_range(c(4.210244, 100.000000), n = 3), 
-  sd_under_elec = seq_range(c(0.00000, 33.03473), n = 3),
+  mean_under_elec = seq_range(c(4.210244, 100), n = 3), 
   mean_fert_rate = seq_range(c(1.104000, 7.502063), n = 3),
-  sd_fert_rate = seq_range(c(0.03911521, 1.47264562), n = 3), 
-  mean_water_withd = seq_range(c(0.02026736, 6495.832000), n = 3), 
-  sd_water_withd = seq_range(c(0.0000, 992.7009), n = 3), 
+  mean_water_withd = median_water_withd, 
   mean_gov_debt = seq_range(c(1.845685, 179.297695), n = 3), 
-  sd_gov_debt = seq_range(c(0.3324068, 76.5222152), n = 3), 
-  mean_inter = seq_range(c(0.00000, 65.78868), n = 3), 
-  sd_inter = seq_range(c(0.00000, 40.63393), n = 3), 
-  mean_pov = seq_range(c(17.7, 82.3), n = 3), 
-  sd_pov = seq_range(c(0.6363961, 12.8358130), n = 3), 
   mean_precip = seq_range(c(18.100, 3219.742), n = 3), 
-  sd_precip = seq_range(c(0.0000, 112.7921), n = 3),
-  mean_sanit = seq_range(c(6.029739, 100.000000), n = 3), 
-  sd_sanit = seq_range(c(0.00000, 22.67257), n = 3), 
-  mean_school_enr = seq_range(c(0.537100, 1.083108), n = 3), 
-  sd_school_enr = seq_range(c(0.01827953, 0.19308682), n = 3), 
-  Underdeveloped = c("0", "1")
+  mean_sanit = median_sanit
   ) 
 grid
 ```
 
 ```{r}
-aug_surv <- aug_surv |>
-  mutate(.predprob = (exp(.fitted)/(1+exp(.fitted))))
+aug_model <- augment(model_glm, newdata = grid, 
+                     se_fit = TRUE)
+```
 
-ggplot(data = aug_surv, mapping = aes(x = Age, 
-                                      y = .predprob
-                                      ))+
-  geom_line(aes(color = Sex), linewidth = 1.7)+
-  facet_wrap(~Pclass)+
-  geom_rug(data = rug_survive, sides="t", alpha = 0.5, 
-           aes(y = Survived))+
-  geom_rug(data = rug_died, sides="b", alpha = 0.5, 
-           aes(y = Survived))+
-  scale_color_viridis_d()
+```{r}
+aug_model <- aug_model |>
+  mutate(.predprob = (exp(.fitted)/(1+exp(.fitted))))
+```
+
+```{r}
+ggplot(data = aug_model, mapping = aes(x = mean_agr_land, 
+                                       y = .predprob)) +
+  geom_line(color = "blue", linewidth = 1) +
+  geom_ribbon(aes(ymin = .predprob - 1.96 * .se.fit,
+                  ymax = .predprob + 1.96 * .se.fit),
+              fill = "lightblue", alpha = 0.5) +
+  theme_minimal()
 ```
 
 
